--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="kisspng-wechat-avatar-icon-line-v-word-5a715fe8a66dc6.6173848315173795606817.png">
+	<link rel="shortcut icon" href="logo.jpeg">
     <link rel="icon" type="image/jpeg" href="logo.jpeg">
 
 	<link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
