Updated work experience

--- a/index.html
+++ b/index.html
@@ -140,6 +140,16 @@
                                <div class="timeline-icon color-3">
 					               <i class="icon-world"></i>
 					           </div>
+				<div class="timeline-label">
+                                   <h2><a href="#">Acumen Solutions</a> <span>August 2019 - present</span></h2>
+                                   <p>Technical Consultant/Developer. Through my orientation and developer bootcamp, I have become more familiar with Salesforce, its capabilities as a CRM
+                                        platform, and Apex, Salesforce's proprietary programming languageand its platform capabilities f. Through my project roles, I have gained a better understanding
+                                    of the financial services industry, specifically loan origination. I have worked on Apex test classes which in return have helped me better understand project backend code,
+                                    as well as implement best practices for writing test code. I have leveraged the ANT Migration tool for daily deployments to various Salesforce sandboxes, and committed my packages
+                                    to Azure DevOps. Attending Agile ceremonies within projects have helped me improve my public speaking skills, as well as further familiarize myself with how such ceremonies function
+                                    in the working world. Through my project experience, I have become familiar with JIRA, which has allowed me and my team mates to keep track of my user stories and how they are progressing
+                                    each sprint.
+                           	</div>		       
                                <div class="timeline-label">
 					               <h2><a href="#">U.S. Embassy, Beijing</a> <span>May 2018 - July 2018</span></h2>
 					               <p>Clerk for the Information Systems Center. I rebuilt the Beijing Digital Rolodex by implementing an AJAX live search functionality. I also had to
