--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             </div>
             <div class="row">
 				<div class="col-md-12">
-				    <div class="timeline-centered">
+				    <div class="timeline-entry-inner">
 					   <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
 					       <div class="timeline-entry-inner">
                                <div class="timeline-icon color-4">
