Fixed work experience section

--- a/index.html
+++ b/index.html
@@ -133,14 +133,14 @@
 				</div>
             </div>
             <div class="row">
-				<div class="col-md-12">				    
+				<div class="col-md-12">
+				    <div class="timeline-centered">
 					   <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
 					       <div class="timeline-entry-inner">
-				<div class="timeline-entry-inner">		       
-                               		<div class="timeline-icon color-4">
-					               <i class="icon-world"></i>
-					           </div>
-				<div class="timeline-label">
+                            <div class="timeline-icon color-4">
+					       <i class="icon-world"></i>
+					</div>
+							   <div class="timeline-label">
                                    <h2><a href="#">Acumen Solutions</a> <span>August 2019 - present</span></h2>
                                    <p>Technical Consultant/Developer. Through my orientation and developer bootcamp, I have become more familiar with Salesforce, its capabilities as a CRM
                                         platform, and Apex, Salesforce's proprietary programming languageand its platform capabilities f. Through my project roles, I have gained a better understanding
@@ -149,17 +149,17 @@
                                     to Azure DevOps. Attending Agile ceremonies within projects have helped me improve my public speaking skills, as well as further familiarize myself with how such ceremonies function
                                     in the working world. Through my project experience, I have become familiar with JIRA, which has allowed me and my team mates to keep track of my user stories and how they are progressing
                                     each sprint.
-                           		</div>
-				</div>
-				<div class="timeline-icon color-3">
-					               <i class="icon-world"></i>
-					           </div>		       
+                           </div>
+			   <div class="timeline-icon color-3">
+					      <i class="icon-world"></i>
+					</div>
                                <div class="timeline-label">
 					               <h2><a href="#">U.S. Embassy, Beijing</a> <span>May 2018 - July 2018</span></h2>
 					               <p>Clerk for the Information Systems Center. I rebuilt the Beijing Digital Rolodex by implementing an AJAX live search functionality. I also had to
                                       execute various MS SQL queries to obtain the relevant information for the Rolodex.
 
 					       </div>
+                           <div class="timeline-entry-inner">
                                <div class="timeline-icon color-2">
 					               <i class="icon-world"></i>
 					           </div>
@@ -168,6 +168,7 @@
                                    <p>Political Logistics Assistant for the Political Section. I helped out with the Strategic and Economic Dialogue, a high-level
 								      dialogue between the United States and China. The tasks I performed required paying strict attention to detail in processing large amounts of data for identification purposes.</p>
 					           </div>
+					       </div>
                             <div class="timeline-entry-inner">
                                 <div class="timeline-icon color-1">
 					               <i class="icon-world"></i>
