Updated work experience icons

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                         <div class="timeline-centered">
                            <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
                               <div class="timeline-entry-inner">
-                                 <div class="timeline-icon color-3">
+                                 <div class="timeline-icon color-4">
                                     <i class="icon-world"></i>
                                  </div>
                                  <div class="timeline-label">
@@ -149,6 +149,9 @@
                                        to Azure DevOps. Attending Agile ceremonies within projects have helped me improve my public speaking skills, as well as further familiarize myself with how such ceremonies function
                                        in the working world. Through my project experience, I have become familiar with JIRA, which has allowed me and my team mates to keep track of my user stories and how they are progressing
                                        each sprint.
+                                 </div>
+                                 <div class="timeline-icon color-3">
+                                    <i class="icon-world"></i>
                                  </div>
                                  <div class="timeline-label">
                                     <h2><a href="#">U.S. Embassy, Beijing</a> <span>May 2018 - July 2018</span></h2>
