--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                                     <div class="timeline-label">
                                        <h2><a href="#">Acumen Solutions</a> <span>August 2019 - present</span></h2>
                                        <p>Technical Consultant/Developer. Through my orientation and developer bootcamp, I have become more familiar with Salesforce, its capabilities as a CRM
-                                          platform, and Apex, Salesforce's proprietary programming languageand its platform capabilities f. Through my project roles, I have gained a better understanding
+                                          platform, and Apex, Salesforce's proprietary programming language. Through my project roles, I have gained a better understanding
                                           of the financial services industry, specifically loan origination. I have worked on Apex test classes which in return have helped me better understand project backend code,
                                           as well as implement best practices for writing test code. I have leveraged the ANT Migration tool for daily deployments to various Salesforce sandboxes, and committed my packages
                                           to Azure DevOps. Attending Agile ceremonies within projects have helped me improve my public speaking skills, as well as further familiarize myself with how such ceremonies function
