--- a/index.html
+++ b/index.html
@@ -78,18 +78,13 @@
                               <div class="about-desc">
                                  <h2>About Me</h2>
                                  <hr>
-                                 <p>My name is Joelle Ramiandrisoa and I am a Spring 2019 graduate of James Madison University in Harrisonburg, VA. 
-                                    I obtained a Bachelor of Science in Computer Science, as well as minors in Mathematics and French.
+                                 <p>My name is Joelle Ramiandrisoa and I graduated from James Madison University in Harrisonburg, VA in spring 2019. 
+                                    I have a Bachelor of Science in Computer Science, as well as minors in Mathematics and French.
                                  </p>
                                  <p> I am looking into pursuing a career in full-stack development, hoping to 
                                     strengthen both my critical thinking and design skills. Aside from that,
-                                    some of my other interests and hobbies include UI design, international affairs, societal issues, traveling, and 
+                                    some of my other interests and hobbies include UI/UX design, international affairs, societal issues, traveling, cooking, boxing, and 
                                     being a music and concert enthusiast. Check out some of my work <a href="https://github.com/joellerami"><strong>here</strong></a>.<br>
-                                    <br> Here is a list of some languages/technologies  and projects that I am currently learning/working on:
-                                 <ul>
-                                    <li> Modernizing the <a href="research/research.html"><strong>Ethical Simulator</strong></a> using React!</li>
-                                    <li> Angular!</li>
-                                 </ul>
                                  </p>
                               </div>
                            </div>
