Updated bio again

--- a/index.html
+++ b/index.html
@@ -81,10 +81,20 @@
                                  <p>My name is Joelle Ramiandrisoa and I graduated from James Madison University in Harrisonburg, VA in spring 2019. 
                                     I have a Bachelor of Science in Computer Science, as well as minors in Mathematics and French.
                                  </p>
-                                 <p> I am looking into pursuing a career in full-stack development, hoping to 
-                                    strengthen both my critical thinking and design skills. Aside from that,
-                                    some of my other interests and hobbies include UI/UX design, international affairs, societal issues, traveling, cooking, boxing, and 
-                                    being a music and concert enthusiast. Check out some of my work <a href="https://github.com/joellerami"><strong>here</strong></a>.<br>
+                                 <p> I am interested in both back-end and front-end development. I have experience with Java, Apex, SQL, SOQL, HTML, CSS, Javascript, PHP,
+                                    Ruby, and am always interested in picking up other programming languages and frameworks because I enjoy learning and strengthening my technical skills.
+                                    I would also like to strengthen my critical thinking and design skills. <br>                                  
+                                    Some of my other interests and hobbies include:
+                                    <ul>
+                                       <li>UI/UX design</li>
+                                       <li>Web Accessibility</li>
+                                       <li>Societal issues</li>
+                                       <li>Traveling</li>
+                                       <li>Cooking</li>
+                                       <li>Boxing</li>
+                                       <li>Being a music and concert enthusiast</li> 
+                                    </ul>
+                                 Check out some of my work <a href="https://github.com/joellerami"><strong>here</strong></a>.<br>
                                  </p>
                               </div>
                            </div>
