--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                                  </p>
                                  <p> I am interested in both back-end and front-end development. I have experience with Java, Apex, SQL, SOQL, HTML, CSS, Javascript, PHP,
                                     Ruby, and am always interested in picking up other programming languages and frameworks because I enjoy learning and strengthening my technical skills.
-                                    I would also like to strengthen my critical thinking and design skills. <br>                                  
+                                    I would also like to strengthen my critical thinking and design skills. Check out some of my work <a href="https://github.com/joellerami"><strong>here</strong></a>.<br> <br>                                  
                                     Some of my other interests and hobbies include:
                                     <ul>
                                        <li>UI/UX design</li>
@@ -93,8 +93,7 @@
                                        <li>Cooking</li>
                                        <li>Boxing</li>
                                        <li>Being a music and concert enthusiast</li> 
-                                    </ul>
-                                 Check out some of my work <a href="https://github.com/joellerami"><strong>here</strong></a>.<br>
+                                    </ul>                               
                                  </p>
                               </div>
                            </div>
