Commented out research section

--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
                                  </div>
                               </a>
                            </div>
+                           <!--
                            <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
                               <a href="research/research.html" target="_blank">
                                  <div class="services color-1">
@@ -120,7 +121,7 @@
                                     <h3>Research</h3>
                                  </div>
                               </a>
-                           </div>
+                           </div>-->
                         </div>
                      </div>
                   </div>
