--- a/software-dev/software.html
+++ b/software-dev/software.html
@@ -57,10 +57,10 @@
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a> 
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 			<div class="text-center">
-				<div class="author-img" style="background-image: url(images/joelleicon2.jpg);"></div>
-				<h1 id="colorlib-logo"><a href="https://joellerami.github.io">Joelle Ramiandrisoa</a></h1>
-				<p><strong>JMU Computer Science '19</strong></p>
-			</div>
+               <div class="author-img" style="background-image: url(images/joelleicon2.jpg);"></div>
+               <h1 id="colorlib-logo"><a href="https://joellerami.github.io">Joelle Ramiandrisoa</a></h1>
+               <p><strong>B.S. Computer Science<br>James Madison University</strong></p>
+            </div>
 		</aside>
 
 		<div id="colorlib-main">
