Changed text color

--- a/software-dev/software.html
+++ b/software-dev/software.html
@@ -58,7 +58,7 @@
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 			<div class="text-center">
                <div class="author-img" style="background-image: url(images/joelleicon2.jpg);"></div>
-               <h1 id="colorlib-logo" style="background-color:#FFF;"><a href="https://joellerami.github.io">Joelle Ramiandrisoa</a></h1>
+               <h1 id="colorlib-logo" style="color:#FFF;"><a href="https://joellerami.github.io">Joelle Ramiandrisoa</a></h1>
                <p><strong>B.S. Computer Science<br>James Madison University</strong></p>
             </div>
 		</aside>
