--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                                  <p>My name is Joelle Ramiandrisoa and I graduated from James Madison University in Harrisonburg, VA in spring 2019. 
                                     I have a Bachelor of Science in Computer Science, as well as minors in Mathematics and French.
                                  </p>
-                                 <p> I am interested in both back-end and front-end development. I have experience with Java, Apex, SQL, SOQL, HTML, CSS, Javascript, PHP,
+                                 <p> I am interested in both back-end and front-end development. I have experience with Java, Apex, SQL, SOQL, HTML, CSS, JavaScript, PHP,
                                     Ruby, and am always interested in picking up other programming languages and frameworks because I enjoy learning and strengthening my technical skills.
                                     I would also like to strengthen my critical thinking and design skills. Check out some of my work <a href="https://github.com/joellerami"><strong>here</strong></a>.<br> <br>                                  
                                     Some of my other interests and hobbies include:
