Updated webdev page

--- a/web-dev/webdev.html
+++ b/web-dev/webdev.html
@@ -86,7 +86,7 @@
                            <h3><a href="https://joellerami.github.io">Web Portfolio</a></h3>
                            <img src="images/portfolio.jpg" />
                            <p>Web portfolio to showcase the projects I've worked on. A constant work in progress! <br>
-                              <strong>Technologies/Languages Used: </strong>HTML/CSS/JavaScript
+                              <strong>Technologies/Languages Used: </strong>HTML, CSS
                            </p>
                         </div>
                         <!-- End .project-image -->
